tools/flowc/tests/errors/error2.flow
import renderform;
require binarytree;
forbid set;

export {
	hello() -> void {}
	hello2() -> void;
	hello3() -> void;
	a = 1;
	native makeTextfield : (fontFamily : string) -> native = RenderSupport.makeTextField;
	U<?> ::= S1, S2, S4<?>;
	S1(a : int);
	S3(int);	// This is not valid
	S2 : (b : string);
	S4(c : ?);
	b : int;
	c : int = 2;

	//
}


b = 2;
hello2() -> void {}

monitorResize() -> void {
	\ -> {}

	// Send our size
	a
}

concatStrings(strings) {
	a = 1;
	a;
	b = 2;
	b;
	c = 3;
	c;
}


